--- a/crm/index.html
+++ b/crm/index.html
@@ -2250,7 +2250,7 @@ Be concise, friendly, and specific. Always give actionable next steps. If asked 
     }
     function renderMapMarkers(){
       if(!map||!map.getSource('shops-source'))return;
-      const filters=getShopFilters();
+      const q=(document.getElementById('shop-search').value||'').toLowerCase();const minScore=document.getElementById('shop-score-filter').value;const owner=document.getElementById('shop-owner-filter').value;const lifecycle=document.getElementById('shop-lifecycle-filter')?.value;
       const filtered=shops.filter(s=>s.lat&&s.lng&&matchesFilters(s,filters));
       document.getElementById('shops-on-map').textContent=filtered.length;
       const geojson={type:'FeatureCollection',features:filtered.map(s=>({
