--- a/crm/index.html
+++ b/crm/index.html
@@ -2252,7 +2252,7 @@ Be concise, friendly, and specific. Always give actionable next steps. If asked 
       if(!map||!map.getSource('shops-source'))return;
       const q=(document.getElementById('shop-search').value||'').toLowerCase();const minScore=document.getElementById('shop-score-filter').value;const owner=document.getElementById('shop-owner-filter').value;const lifecycle=document.getElementById('shop-lifecycle-filter')?.value;
       const filtered=shops.filter(s=>s.lat&&s.lng&&matchesFilters(s,filters));
-      document.getElementById('shops-on-map').textContent=filtered.length;
+      const mapCount=document.getElementById('shops-on-map');if(mapCount)mapCount.textContent=filtered.length;
       const geojson={type:'FeatureCollection',features:filtered.map(s=>({
         type:'Feature',
         geometry:{type:'Point',coordinates:[parseFloat(s.lng),parseFloat(s.lat)]},
