Use allShopsForMap for map rendering

--- a/crm/index.html
+++ b/crm/index.html
@@ -2251,7 +2251,7 @@ Be concise, friendly, and specific. Always give actionable next steps. If asked 
     function renderMapMarkers(){
       if(!map||!map.getSource('shops-source'))return;
       const q=(document.getElementById('shop-search').value||'').toLowerCase();const minScore=document.getElementById('shop-score-filter').value;const owner=document.getElementById('shop-owner-filter').value;const lifecycle=document.getElementById('shop-lifecycle-filter')?.value;
-      const filtered=shops.filter(s=>{
+      const filtered=(allShopsForMap||shops).filter(s=>{
         if(!s.lat||!s.lng)return false;
         if(q&&!s.name.toLowerCase().includes(q)&&!(s.city||'').toLowerCase().includes(q))return false;
         if(lifecycle==='partner'&&!s.is_joe_partner)return false;
