Fix deal page to populate all shop fields (POS, launch date, how heard, referral)

--- a/crm/index.html
+++ b/crm/index.html
@@ -3029,6 +3029,10 @@ async function showDealPage(id){
         document.getElementById('deal-page-coffee-type').value=shop?.coffee_shop_type||'';
         document.getElementById('deal-page-revenue').value=shop?.monthly_revenue||'';
         document.getElementById('deal-page-locations').value=shop?.num_locations||'';
+        document.getElementById('deal-page-pos').value=shop?.current_pos||'';
+        document.getElementById('deal-page-launch').value=shop?.target_launch_date||'';
+        document.getElementById('deal-page-how-heard').value=shop?.how_heard||'';
+        document.getElementById('deal-page-referral').value=shop?.referral_source||'';
         
         // Company - show linked shop
         currentDealShopId=d.shop_id||null;
