--- a/crm/index.html
+++ b/crm/index.html
@@ -3048,6 +3048,7 @@ async function showDealPage(id){
         document.getElementById('deal-page-contact').innerHTML=contact?`<span class="clickable" onclick="openContactModal('${contact.id}')">${contact.first_name} ${contact.last_name}</span> <span onclick="clearDealContact()" style="cursor:pointer;color:#999;margin-left:8px">✕</span>`:'—';
         
         renderDealPageTimeline(id);
+        renderDealWebActivity(id);
         renderDealPageEnrollments();
         navigateTo('deal-view');
       }
