--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
     .footer-cities .view-all {
       display: inline-block;
       margin-top: 1rem;
-      color: var(--green-500);
+      color: var(--gray-900);
       font-weight: 500;
     }
     
