Update hero subtitle with dynamic shop count

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h1>Find Your Perfect Cup</h1>
-      <p>Discover independent coffee shops, order ahead, and earn rewards at 22,000+ cafes across the US.</p>
+      <p id="heroSubtitle">Support local and discover over <span id="heroShopCount">46,000</span> independent coffee shops across the US.</p>
       
       <div class="search-container">
         <div class="search-box">
@@ -903,7 +903,7 @@
         
         // Update stats
         if (data.stats) {
-          document.getElementById('statShops').textContent = data.stats.totalShops.toLocaleString();
+          document.getElementById('statShops').textContent = data.stats.totalShops.toLocaleString(); document.getElementById('heroShopCount').textContent = Math.floor(data.stats.totalShops / 1000).toLocaleString() + ',000';
           document.getElementById('statPartners').textContent = data.stats.partnerCount.toLocaleString();
           document.getElementById('statCities').textContent = data.stats.cityCount.toLocaleString() + '+';
         }
