Fix column names in optimized queries

--- a/crm/index.html
+++ b/crm/index.html
@@ -1577,7 +1577,7 @@ I noticed {{company}} and thought...
 
     let allPartners=[];
     let allShopsForMap=[];
-    const SHOP_COLUMNS = 'id,name,city,state,state_code,address,phone,email,website,contact_name,lead_score,lead_source,lifecycle_stage,pipeline_stage,is_joe_partner,assigned_to,created_at,pos_system,shop_type,has_online_ordering,google_rating,review_count';
+    const SHOP_COLUMNS = 'id,name,city,state,state_code,address,phone,email,website,contact_name,lead_score,lead_source,lifecycle_stage,pipeline_stage,is_joe_partner,assigned_to,created_at,current_pos,coffee_shop_type,google_rating,total_reviews';
     
     async function loadMapShops() {
       // Fetch all shops with coordinates (skip caching - too large for localStorage)
@@ -1618,7 +1618,7 @@ I noticed {{company}} and thought...
       // Load map shops in background
       loadMapShops().then(()=>{if(map&&mapVisible)renderMapMarkers();});
       
-      const DEAL_COLUMNS = 'id,name,shop_id,pipeline_id,stage,amount,close_date,assigned_to,contact_id,created_at,updated_at,notes,probability';
+      const DEAL_COLUMNS = 'id,name,shop_id,pipeline_id,stage,amount,close_date,assigned_to,contact_id,created_at,updated_at,notes';
       const CONTACT_COLUMNS = 'id,first_name,last_name,email,phone,job_title,company_id,shop_id,lifecycle_stage,lead_source,lead_status,assigned_to,created_at,updated_at';
       const[sh,partners,c,co,d,seq,t,a,e,tm,mn,et,wa]=await Promise.all([
         db.from('shops').select(SHOP_COLUMNS).order('lead_score',{ascending:false}).range(0,49),
